# cpputest-with-actions

./: CMakeLists.txt  Dockerfile
.github/workflows/: unit-test.yaml
src/: CMakeLists.txt
src/divide/: divide.c  divide.h
src/multiple/: multiple.c  multiple.h
src/subtract/: subtract.c  subtract.h
src/sum/: sum.c  sum.h
tests/: CMakeLists.txt
tests/divide/: main.cpp  test.cpp
tests/multiple/: test.cpp
tests/subtract/: test.cpp
tests/sum/: test.cpp
